--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     
   <body background="#">
-    <title>Chat!</title>
+    <title>Chat! -Pepperell Clash</title>
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -93,14 +93,10 @@
 </nav>
 <br>
 
-<div class="alert alert-danger alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Want Your Own?</strong> Email max24patenaude@gmail.com to get your own Chat! chatroom.
-</div>
 
 
 <br><br>
-
+<center><h1><font color=orange>Chat Room To The Right --></font></h1></center>
 <center>
 <br>
 <script>var __v='barc-user-teddy._24';</script>
